cabal-version:      2.4
name:               plutus-budget-service
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A server for calculating memory and cpu usage of plutus scripts

-- A longer description of the package.
-- description:

-- The license under which the package is released.
-- license:
-- author:
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:


executable budget-server
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules:  Evaluate
                  Config

  --------------------
  -- IOG dependencies
  --------------------
  build-depends:  cardano-api
                , cardano-crypto-class
                , cardano-ledger-alonzo
                , cardano-ledger-core
                , cardano-ledger-shelley
                , cardano-slotting
                , cardano-wallet
                , cardano-wallet-core
                , plutus-contract

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:  base ^>=4.14.1.0
                , aeson
                , array
                , bytestring
                , containers
                , http-types
                , strict-containers
                , text
                , time
                , transformers
                , wai
                , wai-cors
                , warp
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wno-missing-import-lists -Wredundant-constraints -O0
